# ml-deploy-workshop

./: .dockerignore  Dockerfile  README.md  pyproject.toml  train.py
.github/workflows/: cd.yml  ci.yml
docs/: cd_explanation.md  ci_explanation.md  docker_build.md  todo_ci_k8s_ignore.md
docs/docker/: 01_Dockerfile_explanation.md  02_docker_build_explanation.md  03_docker_run_explanation.md  04_api_consumption_explanation.md
docs/workflows_ci_cd/: ci_cd_workflow.md  todo_about_models.md
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
