[project]
name = "ml-deploy-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "httpx==0.28.1",
    "joblib==1.4.2",
    "numpy==2.2.1",
    "pydantic==2.10.4",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "scikit-learn==1.6.1",
    "uvicorn[standard]==0.34.0",
]
